# DashAI

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  CNAME  CONTRIBUTING.rst  MANIFEST.in  README.md  README.rst  alembic.ini  changelog  dashai  dashai.py  init.sh  pyproject.toml  requirements-dev.txt  requirements-plugins.txt  requirements.txt  run-dev.py  run.sh  setup.py  svc.py  tests.ipynb
.git-hooks/: pre-commit
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: build-test.yaml  docs.yaml  npmtest.yaml  pre-commit.yaml  pytest.yaml
DashAI/: __init__.py  __main__.py
DashAI/back/: README.md  app.py  app_init.py  config.py  config.yaml  configObject.py  config_object.py  container.py  containers.py  dataLoadModel.py  generate_dataset.py  initial_components.py  kink_container.py  main.py  plugins_config.py  requirements-dev.txt  requirements.txt  server.py
DashAI/back/Database/: dashAI.sqlite  db.py  models.py
DashAI/back/Dataloaders/: config_format.json  csvDataLoader.py  dataLoadModel.py  dataLoaderMain.py
DashAI/back/api/: deps.py  front_api.py  utils.py
DashAI/back/base/: base_model.py  base_task.py
DashAI/back/converters/: __init__.py  base_converter.py  column_dropper.py  column_dropper_by_index.py  column_dropper_by_name.py
DashAI/back/core/: __init__.py  app.py  component_registry.py  config.py  config.yaml  core_components.py  job_queue.py  runner.py
DashAI/back/database/: database.py  db.py  models.py  session.py
DashAI/back/dataloaders/: __init__.py
DashAI/back/dependencies/: __init__.py  config_builder.py
DashAI/back/example_dataset/: dummy_numeric.json  dummy_text.json  irisDataset.json  twitterDataset.json
DashAI/back/example_datasets/: diabetes.csv  dummy_example.json  dummy_numeric.json  dummy_text.json  irisDataset.json  random_text.json  translationEngSpaDatasetSmall.json  twitterDataset.json  update_datasets.py
DashAI/back/explainability/: README.md  __init__.py  base_explainer.py  global_explainer.py  local_explainer.py  utils.py
DashAI/back/exploration/: __init__.py  base_explorer.py
DashAI/back/job/: __init__.py  base_job.py  converter_job.py  explainer_job.py  explorer_job.py  generative_job.py  model_job.py  run_job.py
DashAI/back/job_queues/: __init__.py  base_job_queue.py  simple_job_queue.py
DashAI/back/metrics/: __init__.py  base_metric.py  classification_metric.py  regression_metric.py  translation_metric.py
DashAI/back/models/: __init__.py  base_model.py  image_classification_model.py  image_generation_model.py  llm_generation_model.py  mlp_image_classifier.py  regression_model.py  tabular_classification_model.py  text_classification_model.py  translation_model.py
DashAI/back/optimizers/: __init__.py  base_optimizer.py  hyperopt_optimizer.py  optuna_optimizer.py
DashAI/back/plugin_system/: loader.py  plugins.json
DashAI/back/plugins/: __init__.py  plugins.json  svc.py  utils.py
DashAI/back/plugins_system/: utils.py
DashAI/back/preprocessor/: base_converter.py  base_preprocessor.py  base_transformer.py  column_dropper_by_index.py  column_dropper_by_name.py  drop_column_by_index_transformer.py  drop_column_by_name_transformer.py  drop_column_transformer.py  preprocessor.py  remove_column_preprocessor.py
DashAI/back/processes/: base_generative_process.py  image_generation_process.py  llm_generation_process.py
DashAI/back/registries/: __init__.py  base_registry.py  base_registry_v2.py  component_registry.py  dataloader_registry.py  metric_registry.py  mixins.py  model_registry.py  register_mixins.py  registration.py  registry.py  relationship_manager.py  task_registry.py
DashAI/back/registry/: model_registry.py  task_registry.py
DashAI/front/: .env  .env.development  .env.production  .eslintrc.js  .gitignore  .prettierrc  craco.config.js  db.json  eslint.config.js  package-lock.json  package.json  sample-db.json  sample-routes.json
alembic/: env.py
alembic/versions/: 2f997776b9a1_add_splits_metadata_to_experiment_model_.py  4bce47006c88_add_splits_metadata_to_experiment_model_.py  649c500185b8_delete_task_name_and_adds_dataloader_.py  7ba93a3d42a8_delete_feature_names_to_experiment_.py  7e990d4a75ec_add_metadata_to_experiment_model_on_db.py  80faf11605a2_initial_migration.py  8307d4c14824_add_metadata_to_experiment_model_on_db.py  d267eb740e0f_delete_dataloader_name_in_dataset_model.py  e40a1eeee0ef_delete_feature_names_from_datasets.py
back/: .gitignore  .pre-commit-config.yaml  README.md  configObject.py  db.py  generate_dataset.py  main.py  requirements.txt  utils.py
back/Database/: db.py  models.py
back/Models/: model.py  numericalWrapperForText.py
back/example_dataset/: dummy_dataset.json  dummy_numeric.json  irisDataset.json  twitterDataset.json
back/test/: test_endpoints.py  test_models.py
docs/: requirements.txt
docs/source/: conf.py  index.rst
front/: .env  .eslintrc.json  README.md  package-lock.json  package.json
front/public/: index.html
front/src/: App.jsx  App.test.jsx  index.jsx
plugins/dashai_image_classification_package/: README.md  pyproject.toml
plugins/dashai_image_classification_package/src/dashai_image_classification_package/: BasicFinetunnedModels.json  ImageDataLoader.json  basic_finetunned_models.py  image_classification_task.py  image_dataloader.py
plugins/image_classification_packg/: pyproject.toml
plugins/image_classification_packg/src/image_classification_package/: __init__.py  image_dataloader.json  image_dataloader.py
plugins/svc_plugin/: pyproject.toml
plugins/tabular_classification_package/: README.md  pyproject.toml
plugins/tabular_classification_package/src/tabular_classification_package/: json_dataloader.py  k_neighbors_classifier.py  random_forest_classifier.py  tabular_classification_model.py
plugins/tabular_plugin/: pyproject.toml
plugins/tabular_plugin/src/tabular_plugin/: k_neighbors_classifier.py  random_forest_classifier.py  tabular_classification_task.py
tests/: test_sample.py
tests/back/: __dataset_generator_dev.ipynb  conftest.py  test_datasets_generator.py  test_main.py
(+864 files in other folders)
