[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "DashAI"
version = "0.0.14"
description = "DashAI: a graphical toolbox for training, evaluating and deploying state-of-the-art AI models."
readme = "README.rst"
authors = [{ name = "DashAI Team", email = "fbravo@dcc.uchile.cl" }]
maintainers = [{ name = "DashAI Team", email = "fbravo@dcc.uchile.cl" }]
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
license = { text = "{{cookiecutter.open_source_license}}" }
dependencies = []


[tool.ruff]
line-length = 88
lint.select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "C4",  # flake8-comprehensions
    "I",   # isort
    "N",   # pep8-naming
    "YTT", # flake8-2020
    "B",   # flake8-bugbear
    "PIE", # flake8-pie
    "PT",  # flake8-pytest-style
    "Q",   # flake8-quotes
    "RSE", # flake8-raise
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
    "ERA", # eradicate
    "PD",  # pandas-vet
]
lint.ignore = ["B008", "B010", "N806", "N817", "N999", "D212"]
exclude = [
    ".git",
    "__pycache__",
    "__init__.py",
    ".mypy_cache",
    ".pytest_cache",
    "alembic",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy" # use numpy-style docstrings.

[tool.ruff.format]
docstring-code-format = true


[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests", "integration"]
addopts = ["--pdbcls=IPython.terminal.debugger:TerminalPdb"]

[tool.mypy]
plugins = ["pydantic.mypy", "sqlmypy"]
ignore_missing_imports = true
disallow_untyped_defs = true
